# mam-podcast-studio

./: .gitignore  index.html  package-lock.json  package.json
.claude/: settings.local.json
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/claude/: mod.rs
src-tauri/src/cleanvoice/: mod.rs
src-tauri/src/commands/: cleanvoice.rs  enhance.rs  episodes.rs  extract.rs  mod.rs  podbean.rs  settings.rs  show_notes.rs  thumbnail.rs  youtube.rs
src-tauri/src/db/: mod.rs
src-tauri/src/ffmpeg/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/podbean/: mod.rs
src-tauri/src/youtube/: mod.rs
src/components/: Sidebar.tsx
src/components/thumbnail/: DraggablePhoto.tsx  FrameCapture.tsx  TemplateSelector.tsx  ThumbnailPreview.tsx  YouTubeStyleTemplate.tsx
src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  Modal.tsx  PasswordInput.tsx  ProgressBar.tsx  Select.tsx  Tabs.tsx  index.ts
src/hooks/: useNewEpisode.ts
src/lib/: database.ts  secrets.ts  tauri.ts  thumbnailTemplates.ts
src/pages/: Dashboard.tsx  Library.tsx  NewEpisode.tsx  Settings.tsx  ShowNotes.tsx
src/pages/steps/: EnhanceStep.tsx  ExtractStep.tsx  ImportStep.tsx  PublishStep.tsx  ReviewStep.tsx  ShowNotesStep.tsx  ThumbnailStep.tsx
src/stores/: episodeStore.ts  settingsStore.ts
src/styles/: globals.css
