[package]
name = "mam-podcast-studio"
version = "1.0.0"
description = "MAM Podcast Studio - Your podcast production, simplified."
authors = ["Ryan Dunn"]
edition = "2021"

[lib]
name = "mam_podcast_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
zip = "2"
base64 = "0.22"
